--- a/structure.tex
+++ b/structure.tex
@@ -472,6 +472,8 @@ innerbottommargin=5pt]{cBox}
 %----------------------------------------------------------------------------------------
 
 \usepackage{hyperref}
+\usepackage{titlesec}
+\setcounter{secnumdepth}{4}
 \hypersetup{hidelinks,backref=true,pagebackref=true,hyperindex=true,colorlinks=false,breaklinks=true,urlcolor= ocre,bookmarks=true,bookmarksopen=false,pdftitle={Title},pdfauthor={Author}}
 \usepackage{bookmark}
 \bookmarksetup{
@@ -686,7 +688,7 @@ addtohook={%
     pdfmenubar=true,        % show Acrobat’s menu?
     pdffitwindow=true,     % window fit to page when opened
     pdfstartview={FitH},    % fits the width of the page to the window
-    pdftitle={Tutorial sobre a Linguagem Racket},    % title
+    pdftitle={JavaScript - Gabriel Gravina},    % title
   %  pdfauthor={Mariana A. Gualhano and Ausberto S. Castro Vera},     % author
     pdfsubject={Paradigmas de Linguagens de Programa\c{c}\~{a}o},   % subject of the document
     pdfcreator={ASCV, WinEdt},   % creator of the document
