Breve introdução de Objetos

--- a/02basicosJS.tex
+++ b/02basicosJS.tex
@@ -83,7 +83,7 @@ helloWorld();
 	Além disso, existem também os tipos especiais "null" e "undefined", que são valores primitivos, porém não são números, strings ou booleanos. Nesse sentido, cada um é considerado membro de um tipo especial.  
 	\subsubsection{Números}
 	%TALVEZ Desconsiderar essa subsection
-	Uma fator da linguagem JavaScript que é incomum em outras línguas é que não há distinção entre inteiros e floats, sendo todos os números representados como floats. 
+	Uma fator da linguagem JavaScript que é incomum em outras línguas é que \part{title}não há distinção entre inteiros e floats, sendo todos os números representados como floats. 
 	A linguagem armazena os números utilizando o formato de floats de 64 bits, podendo armazenar números grandes com precisão considerável.
 	
 	\subsubsection{Strings}
