--- a/03ObjetosJS.tex
+++ b/03ObjetosJS.tex
@@ -11,7 +11,7 @@
    %%%%%%%%======================
     \section{Classes e Objetos}
     %%%%%%%%======================
-
+De acordo com \cite{flanagan2020javascript}, objetos são o tipo de dados fundamentais do JavaScript. Um objeto nada mais é do que um valor composto que é constituído de múltiplos valores. Sendo assim, um objeto permite armazenar e buscá-los pelo nome.
 
    \begin{lstlisting}
     class NomeClasse:
