--- a/GabrielGravina-JavaScript.tex
+++ b/GabrielGravina-JavaScript.tex
@@ -161,7 +161,7 @@
 
 \chapterimage{capitulo.jpg} % Chapter heading image
 \input{02basicosJS.tex}
-%\input{03ObjetosJS.tex}
+\input{03ObjetosJS.tex}
 %\input{04aplicJS.tex}
 %\input{05ferramentasJS.tex}
 %\input{06conclusao.tex}
